# notifications-router-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  dependencies.py  event_strategies.py  filters.py  groupers.py  handlers.py  logger.py  main.py  sorters.py  telegram.py  text_helpers.py  time_helpers.py  units_resolver.py  units_storage.py
src/callback_data/: __init__.py  write_offs.py
src/enums/: __init__.py  country_codes.py  events.py  measurement_units.py  report_error_codes.py  sales_channels.py  write_offs.py
src/handlers/: __init__.py  specific_chats.py  specific_units.py
src/models/: __init__.py  canceled_orders.py  cheated_phone_numbers.py  customer_feedbacks.py  delivery_speed.py  events.py  heated_shelf_statistics.py  inventory_stock_items.py  late_delivery_vouchers.py  report_types.py  revenue.py  shop_sales_by_sales_channels.py  stop_sales_by_ingredients.py  stop_sales_by_sectors.py  units.py  unprinted_receipts.py  write_offs.py
src/views/: __init__.py  base.py  canceled_orders.py  cheated_phone_numbers.py  customer_feedbacks.py  delivery_speed.py  heated_shelf_statistics.py  inventory_stock_items.py  late_delivery_vouchers.py  revenue.py  sales_statistics.py  stop_sales_by_sales_channels.py  stop_sales_by_sectors.py  unit_stop_sales_by_ingredients.py  unprinted_receipts.py  write_offs.py
tests/: test_units_resolver.py
tests/factories/: __init__.py  cheated_phone_numbers.py  delivery_speed.py  late_delivery_vouchers.py  revenue_statistics.py  stop_sales_by_sectors.py  units.py
tests/test_time_helpers/: test_abbreviate_time_units.py
tests/test_views/: test_cheated_phone_numbers.py  test_stop_sales_by_sectors.py  (+2 more)
